fix line-height and make text look better on mobile view, also removed h1 as it was deemed unecessary

--- a/src/components/AboutTheTeam/AboutTheTeam.module.css
+++ b/src/components/AboutTheTeam/AboutTheTeam.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px;
+  padding: 20px 10px;
 }
 
 .imageContainer {
@@ -12,7 +12,7 @@
 
 .imageContainer img {
   height: auto;
-  max-width: 66%;
+  max-width: 90%;
   box-shadow: 0 5px 1px rgba(0, 0, 0, 0.2), 0 20px 10px rgba(0, 0, 0, 0.2),
     0 10px 10px rgba(0, 0, 0, 0.2), 0 10px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
@@ -37,4 +37,13 @@
 
 a {
   padding: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .textContainer {
+    display: block;
+    justify-content: space-evenly;
+    width: 100%;
+    max-width: 90%;
+  }
 }
